--- a/about-section.html
+++ b/about-section.html
@@ -11,8 +11,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/reset.css" />
-    <link rel="stylesheet" href="./src/statistics.css" />
-    <title>Statistics</title>
+    <link rel="stylesheet" href="./src/about_section.css" />
+    <title>About section</title>
   </head>
-  <body></body>
+  <body>
+    <section class="about section"></section>
+  </body>
 </html>
