--- a/index.html
+++ b/index.html
@@ -15,8 +15,26 @@
     <title>Home</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <nav class="page__menu menu">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a class="logo" href="/">
+                <img src="xvvv" alt="ssss">
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+      </nav>
+    </header>
+    <main>
+      <section>
+
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
