--- a/about-section.html
+++ b/about-section.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Neucha&family=Nunito:ital,wght@0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -15,6 +21,151 @@
     <title>About section</title>
   </head>
   <body>
-    <section class="about section"></section>
+    <section class="about section">
+      <div class="container">
+        <h2 class="about__title">Про ProYav</h2>
+        <div class="about__wrapper">
+          <div class="about-descr__col">
+            <p class="about-descr__text">
+              <span>ProYav</span> – реально крута платформа, щоб уникнути
+              незручних ситуацій під час онлайн-співбесід, пов’язаних з
+              емоціями.
+            </p>
+            <img
+              src="./src/images/descr_img.png"
+              alt="Job interview photo"
+              class="about-descr__img"
+            />
+          </div>
+          <div class="about-detail__col">
+            <p class="about-detail__text">
+              Чи реально джуну пройти співбесіду з першого разу та отримати
+              офер? Складно, чи не так?
+            </p>
+            <p class="about-detail__text">
+              Але ж як старанна підготовка, повторення технічних термінів,
+              ресьорч сайту та цінностей компанії?
+            </p>
+            <p class="about-detail__text">
+              Емоції. Страх, невпевненість, відчай…
+            </p>
+            <img
+              src="./src/images/detail_img.png"
+              alt="Schedule job interview"
+              class="about-detail__img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="advantage section">
+      <div class="container">
+        <h2 class="advantage__title">Для кого ProYav</h2>
+        <div class="advantage__wrapper">
+          <div class="advantage-list__wrapper">
+            <ul class="advantage__list">
+              <li class="advantage-list__item">
+                <h3 class="advantage-item__title">Для джуна</h3>
+                <p class="advantage-item__text">
+                  Потренуватися, підготуватися та спробувати свої сили.
+                </p>
+              </li>
+              <li class="advantage-list__item">
+                <h3 class="advantage-item__title">Результат</h3>
+                <p class="advantage-item__text">
+                  Впевненість у собі та прокачаний скіл з керування власними
+                  емоціями під час співбесіди.
+                </p>
+              </li>
+            </ul>
+            <div class="advantage-list__img">
+              <img src="./src/images/chicken.png" alt="chicken" width="184" />
+            </div>
+          </div>
+          <div class="advantage-list__wrapper">
+            <ul class="advantage__list">
+              <li class="advantage-list__item">
+                <h3 class="advantage-item__title">Для компанії</h3>
+                <p class="advantage-item__text">
+                  Побачити, що саме відчуває джун на співбесіді, і, якщо варто,
+                  дати другий шанс.
+                </p>
+              </li>
+              <li class="advantage-list__item">
+                <h3 class="advantage-item__title">Результат</h3>
+                <p class="advantage-item__text">
+                  Можливість не втратити крутого молодого спеціальста після
+                  першої співбесіди.
+                </p>
+              </li>
+            </ul>
+            <div class="advantage-list__img">
+              <img src="./src/images/owl.png" alt="owl" width="222" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="how-to section">
+      <div class="container">
+        <h2 class="how-to__title">Як це працює?</h2>
+        <div class="how-to__wrapper">
+          <div class="how-to__list-col">
+            <ul class="how-to__list">
+              <li class="howto-list__item">
+                <div class="howto-item__number">1</div>
+                <p class="howto-item__text">Перейди на платформу ProYav</p>
+              </li>
+              <li class="howto-list__item">
+                <div class="howto-item__number">2</div>
+                <p class="howto-item__text">
+                  Надай дозвіл на доступ до твоєї камери
+                </p>
+              </li>
+              <li class="howto-list__item">
+                <div class="howto-item__number">3</div>
+                <p class="howto-item__text">
+                  Випробуй можливості ProYav та переконайся, що вона реально
+                  крута
+                </p>
+              </li>
+              <li class="howto-list__item">
+                <div class="howto-item__number">4</div>
+                <p class="howto-item__text">
+                  Завантаж та встанови розширення для свого браузера
+                </p>
+              </li>
+              <li class="howto-list__item">
+                <div class="howto-item__number">5</div>
+                <p class="howto-item__text">
+                  Запусти розширення ProYav з відеоконференцією та протестуй
+                  свої емоції
+                </p>
+              </li>
+              <li class="howto-list__button">
+                <a href="#" class="howto__button">Завантажити розширення</a>
+              </li>
+            </ul>
+          </div>
+          <div class="how-to__img-col">
+            <img
+              src="./src/images/lovely-face.png"
+              alt="lovely-face"
+              class="howto__lovely--img"
+            />
+            <img
+              src="./src/images/neutral-face.png"
+              alt="neutral-face"
+              class="howto__neutral--img"
+            />
+            <img
+              src="./src/images/surprised-face.png"
+              alt="surprised-face"
+              class="howto__surprised--img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
