add try section

--- a/about-section.html
+++ b/about-section.html
@@ -143,7 +143,7 @@
                 </p>
               </li>
               <li class="howto-list__button">
-                <a href="#" class="howto__button">Завантажити розширення</a>
+                <a href="#" class="howto__button btn">Завантажити розширення</a>
               </li>
             </ul>
           </div>
@@ -163,6 +163,59 @@
               alt="surprised-face"
               class="howto__surprised--img"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="galery section">
+      <div class="container">
+        <h2 class="galery__title">Галерея</h2>
+      </div>
+    </section>
+    <section class="plus section">
+      <div class="container">
+        <h2 class="plus__title">Переваги</h2>
+        <div class="plus__wrapper">
+          <ul class="plus__list">
+            <li class="plus-list__item">
+              <span class="plus--line"></span>
+              <p class="plus-list__text">
+                Розширення «ProYav», яке можна синхронізувати з
+                відеоконференцією
+              </p>
+            </li>
+            <li class="plus-list__item">
+              <span class="plus--line"></span>
+              <p class="plus-list__text">
+                Можливість для джуна потренуватися перед реальною співбесідою
+              </p>
+            </li>
+            <li class="plus-list__item">
+              <span class="plus--line"></span>
+              <p class="plus-list__text">
+                Крутий молодий співробітник для компанії
+              </p>
+            </li>
+          </ul>
+          <a href="#" class="plus__button btn">Завантажити розширення</a>
+        </div>
+      </div>
+    </section>
+    <section class="try section">
+      <div class="container">
+        <h2 class="try__title">Прояви емоції</h2>
+        <div class="try__wrapper">
+          <div class="try-list__wrapper">
+            <h3 class="try-item__title">Cпробуй демо-версію ProYav</h3>
+            <a href="#" class="try__button try__button--transparent btn"
+              >Спробувати</a
+            >
+          </div>
+          <div class="try-list__wrapper">
+            <h3 class="try-item__title">
+              Завантажуй розширення «ProYav» на свій браузер
+            </h3>
+            <a href="#" class="try__button btn">Завантажити розширення</a>
           </div>
         </div>
       </div>
