--- a/about-section.html
+++ b/about-section.html
@@ -197,7 +197,12 @@
               </p>
             </li>
           </ul>
-          <a href="#" class="plus__button btn">Завантажити розширення</a>
+          <a
+            href="https://github.com/Arag0rn/FaseEmotion"
+            target="_blank"
+            class="plus__button btn"
+            >Завантажити розширення</a
+          >
         </div>
       </div>
     </section>
@@ -207,7 +212,10 @@
         <div class="try__wrapper">
           <div class="try-list__wrapper">
             <h3 class="try-item__title">Cпробуй демо-версію ProYav</h3>
-            <a href="#" class="try__button try__button--transparent btn"
+            <a
+              href="./demo.html"
+              target="_blank"
+              class="try__button try__button--transparent btn"
               >Спробувати</a
             >
           </div>
@@ -215,7 +223,12 @@
             <h3 class="try-item__title">
               Завантажуй розширення «ProYav» на свій браузер
             </h3>
-            <a href="#" class="try__button btn">Завантажити розширення</a>
+            <a
+              href="https://github.com/Arag0rn/FaseEmotion"
+              target="_blank"
+              class="try__button btn"
+              >Завантажити розширення</a
+            >
           </div>
         </div>
       </div>
