Implement the functionality of demo page

--- a/demo.html
+++ b/demo.html
@@ -33,6 +33,11 @@
     </style>
   </head>
   <body>
-    <video id="video" width="720" height="560" autoplay muted></video>
+    <div id="emojiContainer" style="
+    font-size: 50px; position: absolute; top: 20px; right: 20px"></div>
+    <video id="video" width="720" height="560" autoplay="" muted=""></video> 
+    
+    <script defer="" src="face-api.min.js" type="module"></script>
+    <script defer="" src="script.js" type="module"></script>  
   </body>
 </html>
