--- a/statistics.html
+++ b/statistics.html
@@ -17,8 +17,41 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/reset.css" />
+    <link rel="stylesheet" href="./src/header.css" />
     <link rel="stylesheet" href="./src/statistics.css" />
     <title>Statistics</title>
   </head>
-  <body></body>
+  <body>
+    <header class="page header">
+      <nav class="page__section" id="header-menu">
+        <div class="container">
+          <div class="header__content">
+            <div class="header__top">
+              <a class="logo" href="/">ProYav</a>
+              <a class="icon" href="#proyav">ПРО ProYav</a>
+              <a class="icon" href="#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
+              <a class="icon" href="#galary">ГАЛЕРЕЯ</a>
+              <a class="icon" href="#advantages">ПЕРЕВАГИ</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer class="footer">
+      <nav class="page__section" id="footer-menu">
+        <div class="container">
+          <div class="header__content">
+            <div class="header__top">
+              <a class="logo" href="/">ProYav</a>
+              <a class="icon" href="#proyav">ПРО ProYav</a>
+              <a class="icon" href="#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
+              <a class="icon" href="#galary">ГАЛЕРЕЯ</a>
+              <a class="icon" href="#advantages">ПЕРЕВАГИ</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </footer>
+  </body>
 </html>
