update header and footer on demo and statistics

--- a/statistics.html
+++ b/statistics.html
@@ -28,10 +28,10 @@
           <div class="header__content">
             <div class="header__top">
               <a class="logo" href="/">ProYav</a>
-              <a class="icon" href="#proyav">ПРО ProYav</a>
-              <a class="icon" href="#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
-              <a class="icon" href="#galary">ГАЛЕРЕЯ</a>
-              <a class="icon" href="#advantages">ПЕРЕВАГИ</a>
+              <a class="icon" href="./index.html#proyav">ПРО ProYav</a>
+              <a class="icon" href="./index.html#advantages">ПЕРЕВАГИ</a>
+              <a class="icon" href="./index.html#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
+              <a class="icon" href="./index.html#galary">ГАЛЕРЕЯ</a>
             </div>
           </div>
         </div>
@@ -44,10 +44,10 @@
           <div class="header__content">
             <div class="header__top">
               <a class="logo" href="/">ProYav</a>
-              <a class="icon" href="#proyav">ПРО ProYav</a>
-              <a class="icon" href="#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
-              <a class="icon" href="#galary">ГАЛЕРЕЯ</a>
-              <a class="icon" href="#advantages">ПЕРЕВАГИ</a>
+              <a class="icon" href="./index.html#pruav">ПРО ProYav</a>
+              <a class="icon" href="./index.html#advantages">ПЕРЕВАГИ</a>
+              <a class="icon" href="./index.html#howwork">ЯК ЦЕ ПРАЦЮЄ</a>
+              <a class="icon" href="./index.html#galary">ГАЛЕРЕЯ</a>
             </div>
           </div>
         </div>
