Adds statistics page

--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/reset.css" />
+    <link rel="stylesheet" href="./src/utils.css" />
     <link rel="stylesheet" href="./src/header.css" />
     <link rel="stylesheet" href="./src/demo.css" />
     <title>Спробуй ProYav</title>
