--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/reset.css" />
+    <link rel="stylesheet" href="./src/utils.css" />
     <link rel="stylesheet" href="./src/home.css" />
     <link rel="stylesheet" href="./src/header.css" />
     <title>ProYav - прояви емоцію</title>
