--- a/statistics.html
+++ b/statistics.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/reset.css" />
+    <link rel="stylesheet" href="./src/utils.css" />
     <link rel="stylesheet" href="./src/header.css" />
     <link rel="stylesheet" href="./src/statistics.css" />
     <title>Statistics</title>
@@ -37,7 +38,81 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="stats section">
+        <div class="container">
+          <h2 class="stats__title">Прояви емоції</h2>
+          <ul class="stats__wrapper">
+            <li class="stats-list__wrapper">
+              <h3 class="stats-item__title">Щастя</h3>
+              <div class="stats-list__img">
+                <img src="./src/images/happy.png" width="150" />
+              </div>
+              <div>
+                <p class="stats-item__text">Сьогодні ти посміхався 65 разів.</p>
+                <p class="stats-item__text">Треба повторити!</p>
+              </div>
+            </li>
+            <li class="stats-list__wrapper">
+              <h3 class="stats-item__title">Здивування</h3>
+              <div class="stats-list__img">
+                <img src="./src/images/surprised.png" width="150" />
+              </div>
+              <div>
+                <p class="stats-item__text">Сьогодні ти дивувався 10 разів.</p>
+                <p class="stats-item__text">Життя має багато сюрпризів!</p>
+              </div>
+            </li>
+            <li class="stats-list__wrapper">
+              <h3 class="stats-item__title">Сум</h3>
+              <div class="stats-list__img">
+                <img src="./src/images/sad.png" width="150" />
+              </div>
+              <div>
+                <p class="stats-item__text">Сьогодні ти сумував 3 рази.</p>
+                <p class="stats-item__text">Тримай хвоста пістолетом!</p>
+              </div>
+            </li>
+            <li class="stats-list__wrapper">
+              <h3 class="stats-item__title">Роздратованість</h3>
+              <div class="stats-list__img">
+                <img src="./src/images/angry.png" width="150" />
+              </div>
+              <div>
+                <p class="stats-item__text">
+                  Сьогодні ти відчував роздратованість 5 разів.
+                </p>
+                <p class="stats-item__text">Візьми хвилинку, побалуй себе!</p>
+              </div>
+            </li>
+            <li class="stats-list__wrapper">
+              <h3 class="stats-item__title">Відраза</h3>
+              <div class="stats-list__img">
+                <img src="./src/images/disgusted.png" width="150" />
+              </div>
+              <div>
+                <p class="stats-item__text">
+                  Сьогодні ти відчував відразу 2 рази.
+                </p>
+                <p class="stats-item__text">Знайти та знешкодити!</p>
+              </div>
+            </li>
+            <li class="stats-list__wrapper">
+              <h3 class="stats-item__title">Страх</h3>
+              <div class="stats-list__img">
+                <img src="./src/images/fearful.png" width="150" />
+              </div>
+              <div>
+                <p class="stats-item__text">
+                  Сьогодні ти відчував страх 3 рази.
+                </p>
+                <p class="stats-item__text">Чи дійсно той чорт страшний?</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <nav class="page__section" id="footer-menu">
         <div class="container">
