--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <p class="content">
             Платформа для розпізнавання <br />
-            емоцій під час онлайн-співбесіди
+            емоцій
           </p>
           <div class="go">
             <a href="./demo.html" class="howto__button btn">Спробувати</a>
@@ -73,9 +73,8 @@
           <div class="about__wrapper">
             <div class="about-descr__col">
               <p class="about-descr__text">
-                <span>ProYav</span> – реально крута платформа, щоб уникнути
-                незручних ситуацій під час онлайн-співбесід, пов’язаних з
-                емоціями.
+                <span>ProYav</span> – реально крута платформа, яка може
+                допомогти уникнути незручних ситуацій, пов’язаних з емоціями.
               </p>
               <img
                 src="./src/images/descr_img.png"
