--- a/demo.html
+++ b/demo.html
@@ -58,6 +58,11 @@
         font-size: 12px;
         color: rgb(22, 78, 104);
       }
+      @media screen and (max-width: 1200px) {
+        #historyContainer {
+          display: none;
+        }
+      }
     </style>
     <script defer src="history.js"></script>
     <script defer src="face-api.min.js"></script>
@@ -92,7 +97,7 @@
     <main>
       <section class="demo section">
         <div id="historyContainer" style="
-          position: absolute; left: 20px">
+          position: absolute; right: 20px">
         </div>
         <div class="container">
           <h2 class="demo__title">Спробуй ProYav</h2>
@@ -103,7 +108,6 @@
                 font-size: 50px;
                 position: absolute;
                 top: 20px;
-                right: 20px;
               "
             ></div>
             <video
